--- a/index.html
+++ b/index.html
@@ -39,19 +39,19 @@
 <main>
     <section class="offer container">
         <div class="offer__holder">
-            <h5 class="offer__title__months">6 months</h5>
+            <h5 class="offer__title__months" tabindex="0">6 months</h5>
             <hr class="offer__line-blue">
             <p class="offer__profession">profession:</p>
-            <h1 class="offer__title">UI/UX designer </h1>
+            <h1 class="offer__title" tabindex="0">UI/UX designer </h1>
             <p class="offer__description">You will learn how to create a brand identity on the web and for printing. Learn
                 how to work in Illustrator, Photoshop, InDesign and Figma. <br> Add posters, logos, merch design and other strong projects to your portfolio. Start a career in the studio
                 or freelance.</p>
-            <button class="button">
+            <button class="button" role="button">
                 Started
             </button>
-            <p class="offer__sale">25%</p>
+            <p class="offer__sale" tabindex="0">25%</p>
             <p class="offer__time">
-                <time>17 Days 17:44:16</time>
+                <time tabindex="0">17 Days 17:44:16</time>
             </p>
         </div>
 
@@ -68,7 +68,7 @@
       <div class="container">
           <div class="profession__block">
               <div class="profession__text">
-                  <h2 class="profession__title">Profession
+                  <h2 class="profession__title" tabindex="0">Profession
                       UI/UX designer
                   </h2>
                   <p class="profession__description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
@@ -77,13 +77,13 @@
               </div>
               <div class="profession__counters">
                   <div class="profession__counter-item">
-                      <h2 class="profession__counter-number">5 000 $</h2>
+                      <h2 class="profession__counter-number" tabindex="0">5 000 $</h2>
                       <p class="profession__counter-title">Salary</p>
                       <hr class="profession__count-hr">
                       <p class="profession__counter-description">Nam libero tempore, cum soluta nobis est</p>
                   </div>
                   <div class="profession__counter-item">
-                      <h2 class="profession__counter-number">4 225</h2>
+                      <h2 class="profession__counter-number" tabindex="0">4 225</h2>
                       <p class="profession__counter-title">Vacancies</p>
                       <hr class="profession__count-hr">
                       <p class="profession__counter-description">Vero eos et accusamus</p>
@@ -92,19 +92,19 @@
           </div>
           <div class="profession__cards">
               <article class="profession__cart-item-green">
-                  <h3 class="profession__card-title">Portfolio</h3>
+                  <h3 class="profession__card-title" tabindex="0">Portfolio</h3>
                   <hr class="profession__card-hr">
                   <p class="profession__card-text">You will learn how to create a brand identity on the web and for
                       printing. Learn how to work in Illustrator, Photoshop, InDesign and Figma</p>
               </article>
               <article class="profession__cart-item-yellow">
-                  <h3 class="profession__card-title">Internship</h3>
+                  <h3 class="profession__card-title" tabindex="0">Internship</h3>
                   <hr class="profession__card-hr">
                   <p class="profession__card-text">You will learn how to create a brand identity on the web and for
                       printing. Learn how to work in Illustrator, Photoshop, InDesign and Figma</p>
               </article>
               <article class="profession__cart-item-pink">
-                  <h3 class="profession__card-title">Certificate</h3>
+                  <h3 class="profession__card-title" tabindex="0">Certificate</h3>
                   <hr class="profession__card-hr">
                   <p class="profession__card-text">You will learn how to create a brand identity on the web and for
                       printing. Learn how to work in Illustrator, Photoshop, InDesign and Figma</p>
@@ -114,22 +114,22 @@
     </section>
     <section class="discover">
         <div class="container">
-            <h2 class="discover__title">Discover Our<br>Prices</h2>
+            <h2 class="discover__title" tabindex="0">Discover Our<br>Prices</h2>
             <div class="discover__cards">
                 <article class="discover__card-green">
-                    <h3 class="discover__card-title">Base</h3>
+                    <h3 class="discover__card-title" tabindex="0">Base</h3>
                     <ul class="discover__card-list">
                         <li class="discover__card-li">Et dolorum fuga et harum quidem rerum</li>
                         <li class="discover__card-li">Mentors and community support</li>
                         <li class="discover__card-li">Necessitatibus saepe</li>
                         <li class="discover__card-li">Ut aut reiciendis</li>
                     </ul>
-                    <p class="discover__card-number">12 000$</p>
-                    <h2 class="discover__card-text">3 000$</h2>
-                    <button class="discover__card-black">Choose</button>
+                    <p class="discover__card-number" tabindex="0">12 000$</p>
+                    <h2 class="discover__card-text" tabindex="0">3 000$</h2>
+                    <button class="discover__card-black" role="button">Choose</button>
                 </article>
                 <article class="discover__card-blue">
-                    <h3 class="discover__card-title-white discover__card-title">Optimal</h3>
+                    <h3 class="discover__card-title-white discover__card-title" tabindex="0">Optimal</h3>
                     <ul class="discover__card-list">
                         <li class="list-white discover__card-li">Rerum hic tenetur a sapiente</li>
                         <li class="list-white discover__card-li">Consectetur, adipisci velit</li>
@@ -137,12 +137,12 @@
                         <li class="list-white discover__card-li">Eum fugiat quo voluptas nulla</li>
                         <li class="list-white discover__card-li">Illo inventore veritatis et quasi architecto</li>
                     </ul>
-                    <p class="discover__card-number-white">24 000$</p>
-                    <h2 class="discover__card-text">6 000$</h2>
-                    <button class="discover__card-white">Choose</button>
+                    <p class="discover__card-number-white" tabindex="0">24 000$</p>
+                    <h2 class="discover__card-text" tabindex="0">6 000$</h2>
+                    <button class="discover__card-white" role="button">Choose</button>
                 </article>
                 <article class="discover__card-green">
-                    <h3 class="discover__card-title">Premium</h3>
+                    <h3 class="discover__card-title" tabindex="0">Premium</h3>
                     <ul class="discover__card-list">
                         <li class="discover__card-li">Ullamco laboris nisi ut</li>
                         <li class="discover__card-li">Voluptate velit esse cillum</li>
@@ -150,9 +150,9 @@
                         <li class="discover__card-li">Necessitatibus saepe eveniet</li>
                         <li class="discover__card-li">Sunt in culpa qui officia</li>
                     </ul>
-                    <p class="discover__card-number0">64 000$</p>
-                    <h2 class="discover__card-text">18 000$</h2>
-                    <button class="discover__card-black">Choose</button>
+                    <p class="discover__card-number0" tabindex="0">64 000$</p>
+                    <h2 class="discover__card-text" tabindex="0">18 000$</h2>
+                    <button class="discover__card-black" role="button">Choose</button>
                 </article>
             </div>
         </div>
